<resources>
    <string name="app_name">DMRC Login</string>
    <string name="action_settings">Settings</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_con_password">Confirm Password</string>
    <string name="login_button">Login</string>
    <string name="sign_up_text">New user? Sign up</string>
    <string name="user_reg">User Registration</string>
    <string name="emp_name">Name</string>
    <string name="emp_username">Username</string>
    <string name="register_button">Register</string>
    <string name="no_geocoder_available">No geocoder available</string>
    <string name="report_text">Your Report</string>
    <string name="text_input">Add text here</string>

    <string name="fetch_address">Fetch address</string>

    <string name="address_found">Address found</string>
    <string name="report">Report</string>

    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>
</resources>
